# potato

./: .coverage  .gitignore  CLAUDE.md  OPTIONAL_FIELDS_UPDATE.md  PLUGIN_SUMMARY.md  README.md  main.py  mkdocs.yml  pyproject.toml  pytest.ini  test_system_alias.py  test_system_typealias.py
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  concepts.md  configuration.md  index.md  mypy.md  quickstart.md  specs.md  workflows.md
docs/advanced/: error-messages.md  inheritance.md  lifecycle-hooks.md  nested-viewdtos.md  non-domain-fields.md  partial-updates.md  transforms.md  visibility.md
docs/core/: aggregates.md  aliasing.md  builddto.md  domain.md  viewdto.md
docs/fundamentals/: aggregates.md  builddto.md  computed-fields.md  domain.md  field-mapping.md  viewdto.md
docs/getting-started/: comparison.md  concepts.md  installation.md  quickstart.md
docs/guides/: examples.md  patterns.md
docs/philosophy/: data-transfer-objects.md  domain-driven-design.md  immutability.md  index.md  separation-of-concerns.md  system-fields.md  type-safety.md  unidirectional-data-flow.md
docs/reference/: api.md  configuration.md  migration.md  philosophy.md
docs/tutorial/: index.md  step-01-domain-and-database.md  step-02-product-api.md  step-03-farmer-api.md  step-04-order-api.md  step-05-access-control-and-errors.md  step-06-complete.md
example/: README.md  config.py  database.py  main.py  pyproject.toml  run.sh
example/application/dtos/: comment_dtos.py  post_dtos.py  user_dtos.py
example/application/services/: comment_service.py  post_service.py  user_service.py
example/domain/: aggregates.py  models.py
example/domain/repositories/: comment_repository.py  post_repository.py  user_repository.py
example/infrastructure/: mappers.py
example/infrastructure/database/: models.py
example/infrastructure/database/repositories/: comment_repository.py  post_repository.py  user_repository.py
example/presentation/: dependencies.py
example/presentation/routers/: comments.py  posts.py  users.py
example/spud_market/: database.py  main.py  seed.py
example/spud_market/application/: context.py  dtos.py  services.py
example/spud_market/domain/: __init__.py  aggregates.py  models.py
example/spud_market/infrastructure/: db_models.py  mappers.py  repositories.py
example/spud_market/presentation/: routers.py
example/with_potato/: app.py  dtos.py  models.py
example/without_potato/: app.py  dtos.py  models.py
mypy_potato/: __init__.py
src/: dto.py  main.py  test_type_hints.py
src/domain/: __init__.py  aggregates.py  domain.py
src/potato/: __init__.py  core.py  dto.py  introspection.py  mypy.py  types.py
src/potato/domain/: __init__.py  aggregates.py  domain.py
src/potato/dto/: __init__.py  base.py  build.py  view.py
tests/: __init__.py  conftest.py  test_aggregate.py  test_aliasing.py  test_build_dto.py  test_core_types.py  test_domain.py  test_domain_aggregate_aliasing.py  test_edge_cases.py  test_error_messages.py  test_view_dto.py
tests/domain/: __init__.py  test_aggregate.py  test_domain.py  test_domain_aggregate_aliasing.py
tests/dto/: __init__.py  test_aliasing.py  test_async.py  test_build_dto.py  test_build_field_mapping.py  test_collection_building.py  test_context.py  test_deep_flattening.py  test_enhancements.py  test_field_transform.py  test_field_visibility.py  test_lifecycle_hooks.py  test_nested_viewdto.py  test_partial_build_dto.py  test_private_fields.py  test_view_dto.py  test_view_dto_advanced.py  test_viewdto_inheritance.py
tests/fixtures/: __init__.py  aggregates.py  classes.py  domains.py  prices.py  products.py  users.py
tests/hacky/: test_edge_cases.py
tests/plugin/: test_mypy_plugin.py
