[project]
name = "potato"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pydantic>=2.12.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/potato"]

[tool.mypy]
files = ["./src", "./tests", "main.py"]
plugins = ["potato.mypy"]
mypy_path = "$MYPY_CONFIG_FILE_DIR"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "ruff>=0.14.10",
    "mypy[dmypy]>=1.18.2",
    "fastapi>=0.128.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "pydantic-settings>=2.12.0",
]
