[project]
name = "potato-dto"
version = "0.1.0"
description = "Type-safe DTOs for clean architecture in Python, built on Pydantic v2"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["dto", "pydantic", "clean-architecture", "domain-driven-design"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.4",
    "typing_extensions>=4.6.0",
]

[project.urls]
Repository = "https://github.com/mde-pach/potato"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/potato"]

[tool.mypy]
files = ["./src", "./tests", "main.py"]
plugins = ["potato.mypy"]
mypy_path = "$MYPY_CONFIG_FILE_DIR"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
test = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
]
dev = [
    {include-group = "test"},
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "ruff>=0.14.10",
    "mypy[dmypy]>=1.18.2",
    "fastapi>=0.128.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "pydantic-settings>=2.12.0",
]
